# beadsd

./: Cargo.toml  DEPLOY.md  README.md
config/: agent_tools.example.toml  config.example.toml  github.env.example  mu.example.toml
freebsd/rc.d/: beadsd
scripts/: beads-gh-sync-all.sh  beads-gh-sync.py  beads-gh-triage.py  beads-onboard  install.sh  push-central.sh
shims/: br
src/: config.rs  main.rs
