[package]
name = "beadsd"
version = "0.1.0"
edition = "2024"
description = "Single-writer beads (br) service: rmcp streamable-HTTP server that owns a central .beads DB and shells out to the br CLI, serializing access so cross-host agents never diverge."

[[bin]]
name = "beadsd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.4.0", features = ["server", "transport-streamable-http-server", "schemars"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"
